add spellcheck action in CI (#19)
* add spellcheck action in CI

* Add custom word list

* update docs

--- a/blog/2018-02-01-welcome.md
+++ b/blog/2018-02-01-welcome.md
@@ -14,6 +14,6 @@ Sysl (pronounced "sizzle") is a system specification language. Using Sysl, you c
 
 The set of outputs is open-ended and allows for your own extensions. Sysl has been created with extensibility in mind and it will grow to support other representations over time.
 
-Give it a twirl by following our [Quickstart guide](/docs/quickstart) and generate the following sequence diagram:
+Give it a twirl by following our [Quick Start guide](/docs/quickstart) and generate the following sequence diagram:
 
 ![Sequence diagram](/img/sysl/bank-sd.svg)
