--- a/blog/2018-02-01-welcome.md
+++ b/blog/2018-02-01-welcome.md
@@ -8,12 +8,14 @@ author_image_url: https://avatars3.githubusercontent.com/u/1596871?s=400&u=f911d
 tags: []
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl';
+
 Sysl (pronounced "sizzle") is a system specification language. Using Sysl, you can specify systems, endpoints, endpoint behaviour, data models and data transformations. The Sysl compiler automatically generates sequence diagrams, integrations, and other views. It also offers a range of code generation options, all from one common Sysl specification.
 
 <!--truncate-->
 
 The set of outputs is open-ended and allows for your own extensions. Sysl has been created with extensibility in mind and it will grow to support other representations over time.
 
-Give it a twirl by following our [Quick Start guide](/docs/quickstart) and generate the following sequence diagram:
+Give it a twirl by following our [Quick Start guide](../docs/tutorial.md) and generate the following sequence diagram:
 
-![Sequence diagram](/img/sysl/bank-sd.svg)
+<img alt="Sequence Diagram" src={useBaseUrl('img/sysl/seq-diagram-puml.png')} />
