replace developer with engineer (#66)

--- a/blog/2018-02-15-scratch.md
+++ b/blog/2018-02-15-scratch.md
@@ -23,8 +23,8 @@ The first action I took was to help the data modellers establish a single point 
 The effect of this was manifold:
 
 1. The gap between the various representations instantly and forever disappeared, since all changes now flowed automatically from a single source of truth.
-2. Developers realised without being told that changes had to flow from upstream into their code.
-3. Developers gained a powerful set of data processing capability out of the box, enabling to remove large slabs of hand-written logic from the code base.
+2. Engineers realised without being told that changes had to flow from upstream into their code.
+3. Engineers gained a powerful set of data processing capability out of the box, enabling to remove large slabs of hand-written logic from the code base.
 4. The time to introduce data model changes went from 2–4 weeks down to 2–4 hours, sometimes even down to minutes.
 5. Project leads were much more willing to accepting changes to the data model as the work progressed.
 
